[package]
name = "wasm"
version = "0.1.0"
edition = "2021"
description = "A performant WASM-based state management library for React"
authors = ["Waztate Team"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.91"
js-sys = "0.3.68"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.41"

[profile.release]
opt-level = 3
lto = true
